feat: use Path insted of String filepaths